# azure-sphere-mt3620

./: README.md
Temp_and_Humidity_SHT31/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  main.c
